<resources>
	<string name="app_name">iDoctor</string>
	<string name="type_text">Введите текст</string>

	<string name="doctors">Врачи</string>
	<string name="chats">Чаты</string>
	<string name="profile">Профиль</string>
	<string name="search_doctor">Поиск врача</string>
	<string name="toast_load_error_message">Не удалось загрузить данные</string>
	<string name="doctors_refresh_error">Не удалось обновить данные</string>
	<string name="doctors_no_connection">Нет подключения к интернету. Потяние вниз чтобы обновить страницу.</string>
	<string name="doctors_load_error_message">Произошла ошибка во время загрузки данных. Потяните вниз чтобы попробовать еще раз.</string>
	<string name="anonymous">Аноним</string>
	<string name="experience">Стаж %s</string>
	<string name="search">Поиск</string>
	<string name="chat_unread_messages">%d непрочитанных сообщений</string>
	<string name="schedule_title">График работы</string>
	<string name="treatments_title">Услуги</string>

	<string-array name="dates">
		<item>января</item>
		<item>февраля</item>
		<item>марта</item>
		<item>апреля</item>
		<item>мая</item>
		<item>июня</item>
		<item>июля</item>
		<item>августа</item>
		<item>сентября</item>
		<item>октября</item>
		<item>ноября</item>
		<item>декабря</item>
	</string-array>

	<string name="toolbar_doctors">Поиск врача</string>
	<string name="toolbar_chats">Сообщения</string>
	<string name="toolbar_profile">Мой профиль</string>

	<!--ProfileActivity-->
	<string name="profile_edit_data">Редактировать данные</string>
	<string name="profile_change_password">Сменить пароль</string>
	<string name="profile_notifications">Уведомления</string>
	<string name="profile_share_app">Поделиться приложением</string>
	<string name="profile_contact_us">Связаться с нами</string>
	<string name="profile_about_us">О нас</string>
	<string name="profile_logout">Выйти</string>
	<string name="profile_dialog_logout">Вы действительно хотите выйти?</string>
	<string name="profile_dialog_logout_positive">Выйти</string>
	<string name="profile_dialog_logout_negative">Отмена</string>

	<!--ProfileEditActivity-->
	<string name="profile_edit_title">Личные данные</string>
	<string name="profile_edit_first_name">Ваше имя:</string>
	<string name="profile_edit_last_name">Ваша фамилия:</string>
	<string name="profile_edit_patronymic">Ваше отчество:</string>
	<string name="profile_edit_phone">Ваш телефон:</string>
	<string name="profile_edit_email">E-mail:</string>
	<string name="profile_edit_save">Сохранить</string>
	<string name="upload_fail">Не удалось загрузить данные, попробуйте еще раз</string>
	<string name="update_fail">Не удалось обновить данные, попробуйте еще раз</string>
	<string name="update_successful">Данные успешно изменены</string>


	<!--PasswordChangeActivity-->
	<string name="password_change_title">Пароль</string>
	<string name="password_change_old">Старый пароль:</string>
	<string name="password_change_new">Новый пароль:</string>
	<string name="password_change_repeat">Повторите пароль:</string>
	<string name="password_change">Изменить</string>
	<string name="password_change_hint">""</string>
	<string name="password_changed">"Пароль успешно изменен"</string>
	<string name="password_fail">Не удалось обновить данные, попробуйте еще раз</string>


	<!--AboutUsActivity-->
	<string name="about_us_title">О нас</string>
	<string name="about_us_description">
		iDoctor — часть крупнейшего в Казахстане интернет-холдинга Chocofamily.
		В число проектов холдинга входят Chocolife, Chocofood, Chocotravel, Рахмет и Lensmark.
	</string>
	<string name="about_us_mission">
		Миссия проектов Chocofamily — увеличивать количество счастливых людей.
		Мы улучшаем качество их жизни, экономя время и деньги, позволяя больше путешествовать,
		открывать мир ипроводить больше времени с любимыми. iDoctor — онлайн-сервис по поиску и записи к врачам в Казахстане.
		\n\n На сайте вы можете: \n
		- записаться на прием к интересующему вас врачу; \n
		- получить онлайн-консультацию без посещения врача; \n
		- оставить отзыв о враче, которого посетили.
	</string>
	<string name="about_us_for_users">iDoctor для \nпользователей</string>
	<string name="about_us_rating">Рейтинг врачей</string>
	<string name="about_us_rating_description">
		В первую очередь в списке врачей находятся врачи с актуальными данными: информация о враче,
		наличие контактов, актуальных отзывов и ответы на вопросы пользователей.
	</string>
	<string name="about_us_specializations">Более 150 специализаций</string>
	<string name="about_us_specializations_description">
		Полный список врачей специалистов узкого и широкого профиля по всему Казахстану.
	</string>
	<string name="about_us_reviews">Актуальные отзывы о врачах</string>
	<string name="about_us_reviews_description">
		Мы собираем актуальные отзывы о врачах для того, чтобы вы смогли сделать правильный выбор
		и получить качественное обслуживание.
	</string>
	<string name="about_us_consultation">Онлайн-консультация врачей</string>
	<string name="about_us_consultation_description">
		Нужна консультация врача без посещения? Задайте вопрос врачу онлайн.
	</string>
	<string name="about_us_numbers">iDoctor в цифрах</string>
	<string name="about_us_contacts">Наши контакты</string>
	<string name="about_us_address">Адрес:</string>
	<string name="about_us_address_first">г. Алматы, ул. Байзакова 280, 2 этаж</string>
	<string name="about_us_phone">Телефон:</string>
	<string name="about_us_phone_first">+7 (727) 222&#8211;22&#8211;00</string>
	<string name="about_us_phone_second">+7 (771) 503&#8211;32&#8211;21</string>
	<string name="about_us_email">E-mail:</string>
	<string name="about_us_email_first">hello@idoctor.kz</string>
	<string name="about_us_email_second">marketing@idoctor.kz - <b>отдел Маркетинга</b></string>
	<string name="about_us_social">Соц. сети:</string>
	<string name="about_us_doctors_count">14 500</string>
	<string name="about_us_doctors">врачей</string>
	<string name="about_us_medcenters_count">2 500</string>
	<string name="about_us_medcenters">медицинских центров</string>
	<string name="about_us_reviews_count">>6 000</string>
	<string name="about_us_reviews_doctors">отзывов о врачах</string>
	<string name="about_us_cities_count">21</string>
	<string name="about_us_cities">город РК</string>

	<!--ContactUsActivity-->
	<string name="contact_us_title">Свяжитесь с нами</string>
	<string name="contact_us_name">Ваше имя:</string>
	<string name="contact_us_email">E-mail:</string>
	<string name="contact_us_review">Ваш отзыв:</string>
	<string name="contact_us_review_send">Оставьте отзыв</string>
	<string name="contact_us_send">Отправить</string>

	<!--item_doctor_card-->
	<string name="doctor_card_reviews">%d отзывов</string>
	<string name="doctor_card_experience">Стаж %d лет</string>
	<string name="doctor_card_appointment">Прием от:</string>
	<string name="doctor_card_currency">тг</string>
	<string name="doctor_card_chat">Чат</string>
	<string name="doctor_card_qualification">Врач</string>
	<string name="doctor_card_no_medcenter">Клиника не указана</string>

	<!--LoginActivity-->
	<string name="login_authorization">Авторизация iDoctor.kz</string>
	<string name="login_registration">Регистрация</string>
	<string name="login_not_registered">Не зарегистрированы?</string>
	<string name="login_email">E-mail:</string>
	<string name="login_password">Ваш пароль:</string>
	<string name="login_signin">Войти</string>
	<string name="login_password_forgot">Не помню пароль</string>
	<string name="login_no_connection">Нет подключения к интернету. Попробуйте позже.</string>
	<string name="login_empty_fields">Поля Логин и Пароль не могут быть пустыми</string>
	<string name="login_invalid_data">Неправильный логин или пароль</string>
	<string name="login_idoctor_description">
		iDoctor — сервис по поиску врачей по всему Казахстану.
		Вызов врача на дом, онлайн-консультация, бесплатная запись на прием.
	</string>
	<string name="login_idoctor_copyright">2013&#8211;2019 © iDoctor.kz</string>

	<!--DoctorDetailsActivity-->
	<string name="doctor_details_experience">Стаж %d лет</string>
	<string name="doctor_details_reviews">%d отзывов</string>
	<string name="doctor_details_schedule">График работы</string>
	<string name="doctor_details_services">Сервисы</string>
	<string name="doctor_details_chat">Чат</string>
	<string name="doctor_details_call">Позвонить</string>
	<string name="doctor_details_creation_error">Произошла ошибка во время создания чата. Попробуйте еще раз.</string>

	<!--item_service-->
	<string name="service_price">%d тг.</string>

	<!--DoctorListFragment-->
	<string name="doctor_list_chat_dialog">Вы уверены что хотите начать чат?</string>
	<string name="doctor_list_chat_dialog_positive">Начать</string>
	<string name="doctor_list_chat_dialog_negative">Отмена</string>
</resources>
