<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:descendantFocusability="beforeDescendants"
	android:focusable="true"
	android:focusableInTouchMode="true">

	<androidx.appcompat.widget.AppCompatImageView
		android:id="@+id/imageBlobTop"
		android:layout_width="wrap_content"
		android:layout_height="220dp"
		android:scaleType="fitXY"
		android:src="@drawable/ic_blob_top"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/textAuthorization"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="80dp"
		android:layout_marginLeft="80dp"
		android:layout_marginTop="36dp"
		android:layout_marginEnd="80dp"
		android:layout_marginRight="80dp"
		android:gravity="center"
		android:text="@string/login_authorization"
		android:textColor="@android:color/white"
		android:textSize="20sp"
		android:textStyle="bold"
		app:fontFamily="@font/montserrat_regular"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<androidx.appcompat.widget.AppCompatImageView
		android:id="@+id/imageShadow"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/ic_mask"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/textAuthorization" />

	<androidx.appcompat.widget.AppCompatImageView
		android:id="@+id/imageLogo"
		android:layout_width="100dp"
		android:layout_height="100dp"
		android:layout_marginTop="28dp"
		android:src="@drawable/ic_idoctor_white"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/textAuthorization" />

	<TextView
		android:id="@+id/textEmail"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="30dp"
		android:layout_marginLeft="30dp"
		android:layout_marginTop="16dp"
		android:text="@string/login_email"
		android:textAllCaps="true"
		android:textColor="#001B36"
		android:textSize="12sp"
		app:fontFamily="@font/montserrat_bold"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/imageLogo" />

	<com.google.android.material.textfield.TextInputEditText
		android:id="@+id/editEmail"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="30dp"
		android:layout_marginLeft="30dp"
		android:layout_marginTop="4dp"
		android:layout_marginEnd="30dp"
		android:layout_marginRight="30dp"
		android:background="@drawable/rounded_edit_text"
		android:hint="@string/login_email"
		android:inputType="textEmailAddress"
		android:paddingStart="12dp"
		android:paddingLeft="12dp"
		android:paddingTop="16dp"
		android:paddingEnd="12dp"
		android:paddingRight="12dp"
		android:paddingBottom="16dp"
		android:textColor="#001B36"
		android:textSize="14sp"
		app:fontFamily="@font/montserrat_regular"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/textEmail" />

	<TextView
		android:id="@+id/textPassword"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="30dp"
		android:layout_marginLeft="30dp"
		android:layout_marginTop="8dp"
		android:text="@string/login_password"
		android:textAllCaps="true"
		android:textColor="#001B36"
		android:textSize="12sp"
		app:fontFamily="@font/montserrat_bold"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/editEmail" />

	<com.google.android.material.textfield.TextInputEditText
		android:id="@+id/editPassword"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="30dp"
		android:layout_marginLeft="30dp"
		android:layout_marginTop="4dp"
		android:layout_marginEnd="30dp"
		android:layout_marginRight="30dp"
		android:background="@drawable/rounded_edit_text"
		android:hint="@string/password_change_hint"
		android:inputType="textPassword"
		android:paddingStart="12dp"
		android:paddingLeft="12dp"
		android:paddingTop="16dp"
		android:paddingEnd="12dp"
		android:paddingRight="12dp"
		android:paddingBottom="16dp"
		android:textColor="#001B36"
		android:textSize="14sp"
		app:fontFamily="@font/montserrat_regular"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/textPassword" />

	<Button
		android:id="@+id/buttonEnter"
		style="@style/Widget.AppCompat.Button.Borderless.Colored"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="30dp"
		android:layout_marginLeft="30dp"
		android:layout_marginTop="12dp"
		android:layout_marginEnd="30dp"
		android:layout_marginRight="30dp"
		android:background="@drawable/rounded_blue_button"
		android:clickable="true"
		android:focusable="true"
		android:text="@string/login_signin"
		android:textColor="@android:color/white"
		app:fontFamily="@font/montserrat_regular"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/editPassword" />

	<ProgressBar
		android:id="@+id/progressLogin"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="2dp"
		android:layout_marginBottom="2dp"
		android:theme="@style/WhiteAccent"
		android:visibility="gone"
		app:layout_constraintBottom_toBottomOf="@id/buttonEnter"
		app:layout_constraintEnd_toEndOf="@id/buttonEnter"
		app:layout_constraintStart_toStartOf="@id/buttonEnter"
		app:layout_constraintTop_toTopOf="@id/buttonEnter" />

	<Button
		android:id="@+id/buttonForgotPassword"
		style="@style/Widget.AppCompat.Button.Borderless.Colored"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="30dp"
		android:layout_marginLeft="30dp"
		android:layout_marginTop="12dp"
		android:layout_marginEnd="30dp"
		android:layout_marginRight="30dp"
		android:background="@drawable/rounded_logout_button"
		android:clickable="true"
		android:focusable="true"
		android:text="@string/login_password_forgot"
		android:textColor="@android:color/white"
		app:fontFamily="@font/montserrat_regular"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/buttonEnter" />

	<TextView
		android:id="@+id/textNotRegistered"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:alpha="0.5"
		android:text="@string/login_not_registered"
		android:textColor="#1D1D26"
		android:textSize="12sp"
		app:fontFamily="@font/montserrat_regular"
		app:layout_constraintEnd_toStartOf="@+id/textRegistration"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintHorizontal_chainStyle="packed"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/buttonForgotPassword" />

	<TextView
		android:id="@+id/textRegistration"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="4dp"
		android:layout_marginLeft="4dp"
		android:layout_marginTop="16dp"
		android:text="@string/login_registration"
		android:textColor="#FB4438"
		android:textSize="12sp"
		app:fontFamily="@font/montserrat_regular"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toEndOf="@+id/textNotRegistered"
		app:layout_constraintTop_toBottomOf="@id/buttonForgotPassword" />

	<androidx.appcompat.widget.AppCompatImageView
		android:id="@+id/imageBlobBottom"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/ic_blob_bottom"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent" />

	<TextView
		android:id="@+id/textDescription"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="30dp"
		android:layout_marginLeft="30dp"
		android:layout_marginEnd="30dp"
		android:layout_marginRight="30dp"
		android:layout_marginBottom="4dp"
		android:gravity="center"
		android:text="@string/login_idoctor_description"
		android:textColor="#919BAB"
		android:textSize="10sp"
		app:fontFamily="@font/montserrat_regular"
		app:layout_constraintBottom_toTopOf="@id/textCopyright"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<TextView
		android:id="@+id/textCopyright"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginLeft="16dp"
		android:layout_marginEnd="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginBottom="10dp"
		android:gravity="center"
		android:text="@string/login_idoctor_copyright"
		android:textColor="#919BAB"
		android:textSize="9sp"
		app:fontFamily="@font/montserrat_regular"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>