<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:descendantFocusability="beforeDescendants"
	android:focusable="true"
	android:focusableInTouchMode="true"
	tools:context=".ui.profile.contact_us.ContactUsActivity">

	<androidx.appcompat.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		android:background="@android:color/white"
		android:theme="@style/ToolbarTheme"
		app:layout_constraintTop_toTopOf="parent"
		app:title="@string/contact_us_title"
		app:titleTextColor="#001B36" />

	<View
		android:id="@+id/shadow"
		android:layout_width="match_parent"
		android:layout_height="4dp"
		android:background="@drawable/shadow"
		app:layout_constraintTop_toBottomOf="@id/toolbar" />

	<TextView
		android:id="@+id/textName"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="20dp"
		android:layout_marginLeft="20dp"
		android:layout_marginTop="28dp"
		android:text="@string/contact_us_name"
		android:textAllCaps="true"
		android:textColor="#001B36"
		android:textSize="12sp"
		app:fontFamily="@font/montserrat_bold"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/shadow" />

	<com.google.android.material.textfield.TextInputEditText
		android:id="@+id/editName"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="20dp"
		android:layout_marginLeft="20dp"
		android:layout_marginTop="4dp"
		android:layout_marginEnd="20dp"
		android:layout_marginRight="20dp"
		android:background="@drawable/rounded_edit_text"
		android:paddingStart="12dp"
		android:paddingLeft="12dp"
		android:paddingTop="16dp"
		android:paddingEnd="12dp"
		android:paddingRight="12dp"
		android:paddingBottom="16dp"
		android:text="Нурсултан Момышулы"
		android:textColor="#001B36"
		android:textSize="14sp"
		app:fontFamily="@font/montserrat_regular"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/textName" />

	<TextView
		android:id="@+id/textEmail"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="20dp"
		android:layout_marginLeft="20dp"
		android:layout_marginTop="20dp"
		android:text="@string/contact_us_email"
		android:textAllCaps="true"
		android:textColor="#001B36"
		android:textSize="12sp"
		app:fontFamily="@font/montserrat_bold"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/editName" />

	<com.google.android.material.textfield.TextInputEditText
		android:id="@+id/editEmail"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="20dp"
		android:layout_marginLeft="20dp"
		android:layout_marginTop="4dp"
		android:layout_marginEnd="20dp"
		android:layout_marginRight="20dp"
		android:background="@drawable/rounded_edit_text"
		android:paddingStart="12dp"
		android:paddingLeft="12dp"
		android:paddingTop="16dp"
		android:paddingEnd="12dp"
		android:paddingRight="12dp"
		android:paddingBottom="16dp"
		android:text="porcuon19@gmail.com"
		android:textColor="#001B36"
		android:textSize="14sp"
		app:fontFamily="@font/montserrat_regular"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/textEmail" />

	<TextView
		android:id="@+id/textReview"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="20dp"
		android:layout_marginLeft="20dp"
		android:layout_marginTop="20dp"
		android:text="@string/contact_us_review"
		android:textAllCaps="true"
		android:textColor="#001B36"
		android:textSize="12sp"
		app:fontFamily="@font/montserrat_bold"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/editEmail" />

	<com.google.android.material.textfield.TextInputEditText
		android:id="@+id/editReview"
		android:layout_width="0dp"
		android:layout_height="150dp"
		android:layout_marginStart="20dp"
		android:layout_marginLeft="20dp"
		android:layout_marginTop="4dp"
		android:layout_marginEnd="20dp"
		android:layout_marginRight="20dp"
		android:background="@drawable/rounded_edit_text"
		android:gravity="start"
		android:hint="@string/contact_us_review_send"
		android:paddingStart="8dp"
		android:paddingLeft="8dp"
		android:paddingTop="8dp"
		android:paddingEnd="8dp"
		android:paddingRight="8dp"
		android:paddingBottom="8dp"
		android:scrollbars="vertical"
		android:textColor="#001B36"
		android:textSize="14sp"
		app:fontFamily="@font/montserrat_regular"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/textReview" />

	<Button
		android:id="@+id/buttonSend"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="20dp"
		android:layout_marginLeft="20dp"
		android:layout_marginTop="32dp"
		android:layout_marginEnd="20dp"
		android:layout_marginRight="20dp"
		android:alpha="0.2"
		android:background="@drawable/rounded_blue_button"
		android:clickable="false"
		android:text="@string/contact_us_send"
		android:textColor="@android:color/white"
		app:fontFamily="@font/montserrat_regular"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/editReview" />

</androidx.constraintlayout.widget.ConstraintLayout>