<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:descendantFocusability="beforeDescendants"
	android:focusable="true"
	android:focusableInTouchMode="true"
	tools:context=".ui.profile.password_change.PasswordChangeActivity">

	<androidx.appcompat.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		android:background="@android:color/white"
		android:theme="@style/ToolbarTheme"
		app:layout_constraintTop_toTopOf="parent"
		app:title="@string/password_change_title"
		app:titleTextColor="#001B36" />

	<View
		android:id="@+id/shadow"
		android:layout_width="match_parent"
		android:layout_height="4dp"
		android:background="@drawable/shadow"
		app:layout_constraintTop_toBottomOf="@id/toolbar" />

	<ScrollView
		android:id="@+id/scrollView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toTopOf="@id/buttonChange"
		app:layout_constraintTop_toBottomOf="@id/toolbar">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingStart="20dp"
			android:paddingLeft="20dp"
			android:paddingEnd="20dp"
			android:paddingRight="20dp">

			<TextView
				android:id="@+id/textPasswordOld"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="32dp"
				android:text="@string/password_change_old"
				android:textAllCaps="true"
				android:textColor="#001B36"
				android:textSize="12sp"
				app:fontFamily="@font/montserrat_bold"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/editPasswordOld"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="4dp"
				android:background="@drawable/rounded_edit_text"
				android:hint="@string/password_change_hint"
				android:inputType="textPassword"
				android:paddingStart="12dp"
				android:paddingLeft="12dp"
				android:paddingTop="16dp"
				android:paddingEnd="12dp"
				android:paddingRight="12dp"
				android:paddingBottom="16dp"
				android:textColor="#001B36"
				android:textSize="14sp"
				app:fontFamily="@font/montserrat_regular"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/textPasswordOld" />

			<TextView
				android:id="@+id/textPasswordNew"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:text="@string/password_change_new"
				android:textAllCaps="true"
				android:textColor="#001B36"
				android:textSize="12sp"
				app:fontFamily="@font/montserrat_bold"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/editPasswordOld" />

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/editPasswordNew"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="4dp"
				android:background="@drawable/rounded_edit_text"
				android:hint="@string/password_change_hint"
				android:inputType="textPassword"
				android:paddingStart="12dp"
				android:paddingLeft="12dp"
				android:paddingTop="16dp"
				android:paddingEnd="12dp"
				android:paddingRight="12dp"
				android:paddingBottom="16dp"
				android:textColor="#001B36"
				android:textSize="14sp"
				app:fontFamily="@font/montserrat_regular"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/textPasswordNew" />

			<TextView
				android:id="@+id/textPasswordRepeat"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:text="@string/password_change_repeat"
				android:textAllCaps="true"
				android:textColor="#001B36"
				android:textSize="12sp"
				app:fontFamily="@font/montserrat_bold"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/editPasswordNew" />

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/editPasswordRepeat"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="4dp"
				android:background="@drawable/rounded_edit_text"
				android:hint="@string/password_change_hint"
				android:inputType="textPassword"
				android:paddingStart="12dp"
				android:paddingLeft="12dp"
				android:paddingTop="16dp"
				android:paddingEnd="12dp"
				android:paddingRight="12dp"
				android:paddingBottom="16dp"
				android:textColor="#001B36"
				android:textSize="14sp"
				app:fontFamily="@font/montserrat_regular"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/textPasswordRepeat" />

		</androidx.constraintlayout.widget.ConstraintLayout>
	</ScrollView>

	<Button
		android:id="@+id/buttonChange"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="20dp"
		android:layout_marginLeft="20dp"
		android:layout_marginTop="32dp"
		android:layout_marginEnd="20dp"
		android:layout_marginRight="20dp"
		android:background="@drawable/rounded_blue_button"
		android:clickable="true"
		android:focusable="true"
		android:text="@string/password_change"
		android:textColor="@android:color/white"
		app:fontFamily="@font/montserrat_regular"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/scrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>